timeline card alignment issued fixed

--- a/src/assets/scss/customize/_timeline.scss
+++ b/src/assets/scss/customize/_timeline.scss
@@ -87,7 +87,7 @@
         border: 1px solid $border-color;
 
         &.timeline-future-movement {
-            background-color: $body-bg;
+            background-color: transparent;
             height: 50px;
             width: 100%;
             top: -16px;
